Spacing/padding fix for templates in follow, as well as darkening of background to get text more visible

--- a/war/cssfiles/compareStyle.css
+++ b/war/cssfiles/compareStyle.css
@@ -18,7 +18,7 @@ h1, h2, h3 {
     width: 100%;
     height: 100%;
     z-index: -1;
-    filter: grayscale(95%) blur(4px);
+    filter: grayscale(95%) blur(4px) brightness(25%);
 }
 
 .heading {
@@ -29,4 +29,8 @@ h1, h2, h3 {
 #search-input{
     font-weight: bold;
     margin-left: 50px;
+}
+
+.invested-templates, .followed-templates, .not-following-or-invested-templates{
+    width: 90%;
 }
